--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
                     <span class="sr-only">Title</span>
-                    <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">
+                    <img class="h-8 w-auto sm:h-10" src="/src/Logo Profesional (Santiago) - Version 3.png">
                   </a>
                 </div>
               </div>
@@ -40,7 +40,7 @@
           <div class="sm:text-center lg:text-left">
             <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
               <span class="block xl:inline">Santiago Arias</span>
-              <span class="block text-indigo-600 xl:inline">@5ar_santi</span>
+              <span class="block text-indigo-600 xl:inline">@5ar_Santi</span>
             </h1>
             <p
               class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
